--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-route": ">=1.2.*",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-material": "~0.9.6"
+    "angular-material": "~0.9.6",
+    "firebase": "~2.2.9",
+    "angularfire": "~1.1.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
